# AI-RESUME-ANALYZER

./: README.md
Project2/: .gitignore  main.py  pyproject.toml
Project2/Frontend/: index.css  index.html
Project2/project2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
